feat: Add Vercel entry script and improve Supabase config
Introduces the necessary script in `index.html` for Vercel to load the application.
Also, enhances the Supabase configuration in `services/supabase.ts` with a more robust environment variable retrieval mechanism and improved key validation. This ensures better handling of configuration across different deployment environments.

--- a/index.html
+++ b/index.html
@@ -71,5 +71,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <!-- Script de entrada obrigatório para o Vercel carregar a aplicação -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
